# cpp_qt

hw_2_1/: CMakeLists.txt  main.cpp
hw_3_1/: CMakeLists.txt  connectiondialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw_4_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
hw_5_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
hw_6_1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
